# JTON

./: .gitignore  BENCHMARK_RESULTS.md  Cargo.toml  LICENSE  NOTICE  OPTIMIZATION_ROADMAP.md  README.md  SPEC.md  _test_format.py  analyze_hotspots.py  bench_tmp.py  benchmark_comparison.py  benchmark_final.py  benchmark_runner.py  benchmark_super_long.py  build.rs  build_and_smoke_test.py  build_and_test.bat  build_and_test.py  build_output.txt  check.js  pyproject.toml  render.yaml  requirements.txt  run_build.py  run_build_test.py  run_rebuild_and_bench.bat  run_tests.py  setup.py  simple_test.py
.github/: CODEOWNERS
.github/agents/: copilot-instructions.md
.github/workflows/: audit.yml  ci.yml  release.yml
.hypothesis/constants/: 17937120436abbef  4bd2735820b43ad2  5b671bd494f051ec  72ddddae50e81a40  7e214233a7edf97c  9c5c6156580ce4a4  9e47f01fdfb95f55
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
archive/old-python-parser/: serializer.py
benchmarks/: README.md  baseline_results.txt  benchmark_throughput.py  benchmark_tokens.py  combined_benchmark_report.py  comprehensive_benchmark.py  datasets.py  escape_fix_results.txt  format_tron.py  formatters.py  growth_based_results.txt  orjson_benchmark.py  phase0_baseline.py  phase1_preallocation.py  run_all_benchmarks.py  token_efficiency.py  token_efficiency_benchmark.py  token_savings_analysis.py  ultra_fast_benchmark.py
benchmarks/docs/: IMPLEMENTATION_SUMMARY.md  PHASE_2_3_SUMMARY.md
benchmarks/results/: BENCHMARK_GUIDE.md  COMPLETE_SUMMARY.md  HOLY_GRAIL_RESULTS.md  QUICK_REFERENCE.md  README.md  TRON_PLAYGROUND_ANALYSIS.md  benchmark_summary.md  comprehensive-report.md  token_efficiency.md
docs/: issues.md  phase1_complete.md  test_results.md  test_suite_complete.md  ultra_fast_plan.md
jton_wasm/: Cargo.toml
jton_wasm/src/: lib.rs
playground/: app.py  index.html  server.py
specs/001-short-name-myson/: data-model.md  grammar.ebnf  plan.md  quickstart.md  research.md  spec.md  tasks.md  technical-paper.md  zen-grid-format.md
specs/001-short-name-myson/checklists/: requirements.md  tasks.md
specs/001-short-name-myson/contracts/: api.md
specs/002-myson-perf-compat/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-myson-perf-compat/checklists/: performance.md  requirements.md  tasks.md
specs/002-myson-perf-compat/contracts/: api.md
specs/002-simd-schema-parser/: analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-simd-schema-parser/checklists/: performance.md  requirements.md
specs/002-simd-schema-parser/contracts/: api.md  error-handling.md  schema-compilation.md
specs/003-performance-1gb/: ANALYSIS_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-performance-1gb/checklists/: release-gate.md  requirements.md
specs/003-performance-1gb/contracts/: api.md
src/: __init__.py  myson_core.c  myson_core.pyx  myson_fast.c  myson_fast.pyx  parser.py  tokenizer.py
src/cli/: __init__.py  parse.py
src/jton/: __init__.py  __init__.pyi  bench.py  cli.py
src/jton_core/src/: c_api.rs  lib.rs  serializer.rs
src/jton_core/src/parser/: error.rs  index_parser.rs  mod.rs  string_cache.rs
src/jton_core/src/simd/: mod.rs  scanner_neon.rs  scanner_scalar.rs
src/jton_core/src/types/: mod.rs
src/lexatron/: __init__.py  __init__.pyi  bench.py
src/lexatron_core/src/: lib.rs  serializer.rs
src/lexatron_core/src/parser/: mod.rs
src/lexatron_core/src/simd/: whitespace.rs
src/myson/: __init__.py
src/myson_core/src/: lib.rs
src/myson_core/src/parser/: error.rs  fast_number.rs  index_parser.rs  json.rs  mod.rs  simd_json.rs  string_cache.rs
src/myson_core/src/simd/: mod.rs  scanner_avx2.rs  scanner_avx512.rs  whitespace.rs
src/myson_core/src/types/: field_descriptor.rs  interner.rs  mod.rs  (+1 more)
src/uoon/: __init__.py  __init__.pyi  bench.py
src/uoon_core/src/: lib.rs  serializer.rs
src/zson/: __init__.py  __init__.pyi  bench.py
src/zson_core/src/: lib.rs  serializer.rs
tests/: README.md  run_all_tests.py  test_compatibility.py  test_comprehensive.py  test_correctness.py  test_json_compatibility.py  test_model.py  test_reference_vectors.py  test_serializer.py  test_zen_grid.py
tests/integration/: test_edge_behaviors.py  test_json_and_table_basic.py  test_table_nesting_mix.py
tests/reference_vectors/: README.md
tests/reference_vectors/json/: README.md
tests/reference_vectors/number/: README.md
tests/rust/: test_interner.rs  test_simd_scanner.rs
tests/rust/benches/: simd_bench.rs
tests/unit/: test_parser_depth_guard.py  test_parser_flat_table.py  test_parser_json_parity.py  test_parser_table_arity.py  test_parser_table_comments.py  test_parser_table_nesting.py  test_parser_trailing_delimiters.py  test_parser_unquoted_errors.py  test_tokenizer.py
(+16 files in other folders)
