[package]
name = "zson_core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "zson_core"
crate-type = ["cdylib"]
path = "src/zson_core/src/lib.rs"

[dependencies]
pyo3 = { version = "0.20" }
lexical-core = "0.8"
itoa = "1.0"
ryu = "1.0"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "simd_bench"
harness = false
path = "tests/rust/benches/simd_bench.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.bench]
opt-level = 3
