[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uoon"
version = "0.1.0"
requires-python = ">=3.10"
description = "High-performance, token-efficient JSON superset with Zen Grid tabular encoding"
authors = [{name = "Gowthamkumar Nandakishore"}]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
python-source = "src"
module-name = "uoon.uoon_core"
include = ["src/uoon/py.typed", "src/uoon/__init__.pyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src"]
