[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jton"
version = "1.0.3"
requires-python = ">=3.10"
description = "JTON (JSON Tabular Object Notation) — A Tabular JSON-Superset Encoding for Efficient LLM Data Processing"
authors = [{name = "Gowthamkumar Nandakishore"}]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
jton = "jton.cli:main"

[tool.maturin]
python-source = "src"
module-name = "jton.jton_core"
include = ["src/jton/py.typed", "src/jton/__init__.pyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src"]
