[package]
name = "jton_wasm"
version = "0.1.0"
edition = "2021"
description = "JTON WebAssembly package — run JTON encode/decode in the browser"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1.0"
# Pull in the core encode/decode logic from the main crate (no PyO3)
# Compile JTON_core as an rlib (non-PyO3 features only via feature flag)
itoa = "1.0"
ryu = "1.0"

[features]
default = []

[profile.release]
opt-level = "z"   # size-optimised for WASM
lto = true
panic = "abort"
